<resources>
    <string name="app_name">Insta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello test blank fragment</string>
    <string name="hello_blank_fragment2">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="feed">Feed</string>
    <string name="share">Share</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">description</string>
    <string name="postAuthor">PostAuthor</string>
    <string name="authorName">AuthorName</string>
    <string name="userEmail">YourEmail@Address</string>
    <string name="passwordHint">Use A Strong Password</string>
    <string name="authorDescription">AuthorDescription</string>
    <string name="postText">PostText</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="delete">Delete</string>
    <string name="loginNew">First Time here enter a Name</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>

</resources>
