<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment_share">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_image_black_24dp" />

    <EditText
        android:id="@+id/share_description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/share_camera_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/camera" />

        <Button
            android:id="@+id/share_gallery_button"
            android:layout_width="199dp"
            android:layout_height="wrap_content"
            android:text="@string/gallery" />

    </LinearLayout>

    <Button
        android:id="@+id/share_toshare_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share" />

</LinearLayout>
